--- a/css/style_global.css
+++ b/css/style_global.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 *{
     padding: 0;margin: 0;
@@ -26,7 +33,7 @@ button{background:none;border: none;}
 @media (max-width:720px) and (orientation:portrait) {
     body{background: #001427;}
 
-    .screens{position: absolute;width: 100vw;transition: .25s;top:0;}
+    .screens{position: absolute;width: 100vw;-webkit-transition: .25s;-o-transition: .25s;transition: .25s;top:0;}
 
     #screen{
         position: relative;
@@ -40,7 +47,7 @@ button{background:none;border: none;}
     #screen-3>#icons-btns>#icon-spawn,
     #screen-3>#icons-btns>#pronto-comecar,
     #screen-3>#icons-btns>#menu-pause,
-    #screen-3>#icons-btns>#fim-jogo{display: grid;place-items: center;}
+    #screen-3>#icons-btns>#fim-jogo{display: -ms-grid;display: grid;place-items: center;}
 
     #screen-2{left: 100%;}
     #screen-3{left: 200%;}
@@ -59,7 +66,9 @@ button{background:none;border: none;}
     #screen-1>#nav-bar>#navegacao>#nav-lista{width: 100%;height: 75px;}
 
     #screen-1>#nav-bar>#navegacao>#nav-lista{
-        display: flex;align-items: center;justify-content: space-between;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;-webkit-box-align: center;-ms-flex-align: center;align-items: center;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;
     }
 
     #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#avatar-player,
@@ -70,8 +79,9 @@ button{background:none;border: none;}
 
     #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp{
         width:160px;height: 75px;
+        display: -ms-grid;
         display: grid;
-        grid-template-areas: "avatar level"
+            grid-template-areas: "avatar level"
                             "avatar exp";
     }
 
@@ -88,7 +98,8 @@ button{background:none;border: none;}
         position: relative;
         top: 20px;
         width: 75px;height: 10px;
-        box-shadow: 0 0 10px rgba(244, 213, 141, .5);
+        -webkit-box-shadow: 0 0 10px rgba(244, 213, 141, .5);
+                box-shadow: 0 0 10px rgba(244, 213, 141, .5);
         grid-area: exp;
     }
 
@@ -103,8 +114,9 @@ button{background:none;border: none;}
     #screen-1>#menu-principal>#menu-prin{padding: 0px 10px;}
 
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu{
+        display: -ms-grid;
         display: grid;
-        grid-template-areas: "loja jogar"
+            grid-template-areas: "loja jogar"
                     "loja jogar"
                     "atualizacao atualizacao";
         grid-gap: 10px;
@@ -114,7 +126,7 @@ button{background:none;border: none;}
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu{height: calc(100vw - 20px);}
 
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu,
-    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu>.cabecalho-btn-menu{display: flex;align-items: center;justify-content: space-between;}
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu>.cabecalho-btn-menu{display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-align: center;-ms-flex-align: center;align-items: center;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;}
 
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu .btn-menu{border-radius: 5px;border: 1px solid #F4D58D;background: #001427;}
 
@@ -124,15 +136,15 @@ button{background:none;border: none;}
 
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu .btn-menu>.cabecalho-btn-menu>.descricao-btn-menu{font-size: var(--desc-btns-menu);}
 
-    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu>.cabecalho-btn-menu{height:100%;padding:25px 10px;flex-direction: column-reverse;}
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu>.cabecalho-btn-menu{height:100%;padding:25px 10px;-webkit-box-orient: vertical;-webkit-box-direction: reverse;-ms-flex-direction: column-reverse;flex-direction: column-reverse;}
     
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2)>.btn-menu>.cabecalho-btn-menu>.titulo-btn-menu{font-size: var(--title-play);font-weight: 700;}
     
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(3)>.btn-menu>.cabecalho-btn-menu{padding:15px;}
 
-    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu{grid-area: loja;flex-direction: column;}
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu{grid-area: loja;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;}
 
-    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu>.item-sublista-menu>.btn-menu{height: calc((100vw / 2) - 15px);display: flex;}
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu>.item-sublista-menu>.btn-menu{height: calc((100vw / 2) - 15px);display: -webkit-box;display: -ms-flexbox;display: flex;}
 
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2){grid-area: jogar;}
 
@@ -144,7 +156,7 @@ button{background:none;border: none;}
     /*---------------------------------------------------------------------------------------------------------*/
     /*---------------------------------------------------------------------------------------------------------*/
 
-    #screen-2{height: 100vh;display: grid;place-items: center;text-align: center;}
+    #screen-2{height: 100vh;display: -ms-grid;display: grid;place-items: center;text-align: center;}
 
     #screen-2>#cabecalho-carregamento>#titulo-nome-load-game>.letra-animada{font-size: 2.375em;font-family:'Adelia', sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
 
@@ -161,7 +173,9 @@ button{background:none;border: none;}
     #screen-3>#cabecalho-area-jogo>#nav-jogo{width: 100%;}
     
     #screen-3>#cabecalho-area-jogo>#nav-jogo>#lista-nav-jogo{
-        display: flex;align-items: center;justify-content: space-around;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;-webkit-box-align: center;-ms-flex-align: center;align-items: center;-ms-flex-pack: distribute;justify-content: space-around;
         text-transform: uppercase;
     }
 
@@ -184,8 +198,9 @@ button{background:none;border: none;}
     #screen-3>#icons-btns>#ib-btns{background: red;}
 
     #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib{
+        display: -ms-grid;
         display: grid;
-        grid-template-areas: "icon-1 icon-2"
+            grid-template-areas: "icon-1 icon-2"
                             "icon-3 icon-4";
     }
 
@@ -193,6 +208,7 @@ button{background:none;border: none;}
         width: calc(100vw / 2);height: calc((100vw / 4));
         background: #001427;
         border: 0.5px solid #F4D58D;
+        display: -ms-grid;
         display: grid;place-items: center;
     }
 
@@ -248,17 +264,87 @@ button{background:none;border: none;}
     #screen-3>#icons-btns>#fim-jogo>#cabecalho-fim-jogo>#lista-score-coins-exp>#scoreJogo{font-weight: 600;}
 }
 
-.letra-animada{
-    animation: letraAnimada .25s linear forwards;
-    animation-delay: .1s;
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(1)>.btn-icons-game{
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(2)>.btn-icons-game{
+        -ms-grid-row: 1;
+        -ms-grid-column: 2;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(3)>.btn-icons-game{
+        -ms-grid-row: 2;
+        -ms-grid-column: 1;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(4)>.btn-icons-game{
+        -ms-grid-row: 2;
+        -ms-grid-column: 2;
+    }
 }
 
-.letra-animada:nth-child(2){animation-delay: .2s;}
-.letra-animada:nth-child(3){animation-delay: .3s;}
-.letra-animada:nth-child(4){animation-delay: .4s;}
-.letra-animada:nth-child(5){animation-delay: .5s;}
-.letra-animada:nth-child(6){animation-delay: .6s;}
-.letra-animada:nth-child(7){animation-delay: .7s;}
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu{
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 3;
+        -ms-grid-column: 1;
+    }
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2){
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 3;
+        -ms-grid-column: 3;
+    }
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(3){
+        -ms-grid-row: 5;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 3;
+    }
+}
+
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#avatar-player{
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 2;
+        -ms-grid-column: 1;
+    }
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#lv-player{
+        -ms-grid-row: 1;
+        -ms-grid-column: 2;
+    }
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#exp-bar{
+        -ms-grid-row: 2;
+        -ms-grid-column: 2;
+    }
+}
+
+.letra-animada{
+    -webkit-animation: letraAnimada .25s linear forwards;
+            animation: letraAnimada .25s linear forwards;
+    -webkit-animation-delay: .1s;
+            animation-delay: .1s;
+}
+
+.letra-animada:nth-child(2){-webkit-animation-delay: .2s;animation-delay: .2s;}
+.letra-animada:nth-child(3){-webkit-animation-delay: .3s;animation-delay: .3s;}
+.letra-animada:nth-child(4){-webkit-animation-delay: .4s;animation-delay: .4s;}
+.letra-animada:nth-child(5){-webkit-animation-delay: .5s;animation-delay: .5s;}
+.letra-animada:nth-child(6){-webkit-animation-delay: .6s;animation-delay: .6s;}
+.letra-animada:nth-child(7){-webkit-animation-delay: .7s;animation-delay: .7s;}
+
+@-webkit-keyframes letraAnimada {
+    50%,100%{color: #F4D58D;}
+    99%{color: #001427;}
+}
 
 @keyframes letraAnimada {
     50%,100%{color: #F4D58D;}
