--- a/css/style_global.css
+++ b/css/style_global.css
@@ -158,7 +158,7 @@ button{background:none;border: none;}
 
     #screen-2{height: 100vh;display: -ms-grid;display: grid;place-items: center;text-align: center;}
 
-    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family:'Adelia', sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
+    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family: Adelia , sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
 
     #screen-2>#cabecalho-carregamento>#titulo-modo-jogo{font-size: var(--title-play);}
 
@@ -187,11 +187,11 @@ button{background:none;border: none;}
 
     #screen-3>#icons-btns{height: calc(100vh - 100px);}
 
-    #screen-3>#icons-btns>#icon-spawn{height: calc(100vh - 100px - (100vw / 2));background: #001427;}
+    #screen-3>#icons-btns>#icon-spawn{height: calc(100vh - 100px - (100vw / 2));background: transparent;}
 
     #screen-3>#icons-btns>#icon-spawn>#icon-s{
         width: 150px;height: 150px;
-        background: #8D0801;
+        background: transparent url('../media/svg/icon-1.svg') no-repeat center center;background-size:100%;
     }
 
     #screen-3>#icons-btns>#ib-btns{background: rgb(255, 0, 0);}
