--- a/css/style_global.css
+++ b/css/style_global.css
@@ -21,7 +21,7 @@ button{background:none;border: none;}
 
 @font-face {
     font-family: 'Adelia';
-    src: url('../media/fonts/ADELIA.otf');
+    src: url('../media/fonts/ADELIA.otf') format('opentype');
 }
 
 :root{
@@ -158,7 +158,7 @@ button{background:none;border: none;}
 
     #screen-2{height: 100vh;display: -ms-grid;display: grid;place-items: center;text-align: center;}
 
-    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family: Adelia , sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
+    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family: 'Adelia' , sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
 
     #screen-2>#cabecalho-carregamento>#titulo-modo-jogo{font-size: var(--title-play);}
 
