--- a/css/style_global.css
+++ b/css/style_global.css
@@ -17,7 +17,6 @@
         url('../media/fonts/ADELIA.svg#ADELIA') format('svg');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
 }
 
 @font-face {
@@ -30,7 +29,6 @@
         url('../media/fonts/ADELIA_1.svg#ADELIA') format('svg');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
 }
 
 *{
@@ -180,7 +178,7 @@ button{background:none;border: none;}
 
     #screen-2{height: 100vh;display: -ms-grid;display: grid;place-items: center;text-align: center;}
 
-    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family:'ADELIA', sans-serif;margin-bottom: 5px;text-shadow: 0 0 25px rgba(244, 213, 141, .5);}
+    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 3.750em;font-family:'ADELIA', sans-serif;margin-bottom: 5px;color: transparent;background: transparent url('../media/svg/minlick.svg') no-repeat center center;background-size: cover;}
 
     #screen-2>#cabecalho-carregamento>#titulo-modo-jogo{font-size: var(--title-play);}
 
