--- a/css/style_global.css
+++ b/css/style_global.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
-* Browsers: last 4 version
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 @font-face {
@@ -46,6 +39,11 @@
     --title-play: 1.375em;
     --title-btn-menu: 1.125em;
     --desc-btns-menu: 0.875em;
+
+    --azul: #001427;
+    --vemelho: #8D0801;
+    --amarelo: #f4d58d;
+    --verde: #708d81;
 }
 
 button{background:none;border: none;}
@@ -101,7 +99,7 @@ button{background:none;border: none;}
         width:160px;height: 75px;
         display: -ms-grid;
         display: grid;
-            grid-template-areas: "avatar level"
+                grid-template-areas: "avatar level"
                             "avatar exp";
     }
 
@@ -136,7 +134,7 @@ button{background:none;border: none;}
     #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu{
         display: -ms-grid;
         display: grid;
-            grid-template-areas: "loja jogar"
+                grid-template-areas: "loja jogar"
                     "loja jogar"
                     "atualizacao atualizacao";
         grid-gap: 10px;
@@ -178,7 +176,7 @@ button{background:none;border: none;}
 
     #screen-2{height: 100vh;display: -ms-grid;display: grid;place-items: center;text-align: center;}
 
-    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 3.750em;font-family:'ADELIA', sans-serif;margin-bottom: 5px;color: transparent;background: transparent url('../media/svg/minlick.svg') no-repeat center center;background-size: cover;}
+    #screen-2>#cabecalho-carregamento>#titulo-nome-load-game{font-size: 2.375em;font-family:'ADELIA', sans-serif;margin-bottom: 5px;text-transform: uppercase;}
 
     #screen-2>#cabecalho-carregamento>#titulo-modo-jogo{font-size: var(--title-play);}
 
@@ -221,7 +219,7 @@ button{background:none;border: none;}
     #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib{
         display: -ms-grid;
         display: grid;
-            grid-template-areas: "icon-1 icon-2"
+                grid-template-areas: "icon-1 icon-2"
                             "icon-3 icon-4";
     }
 
@@ -287,6 +285,69 @@ button{background:none;border: none;}
     #screen-3>#icons-btns>#fim-jogo>#cabecalho-fim-jogo>#lista-score-coins-exp>#title-n-record{font-size: var(--title-play);}
 
     #screen-3>#icons-btns>#fim-jogo>#cabecalho-fim-jogo>#lista-score-coins-exp>#scoreJogo{font-weight: 600;}
+}
+
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(1)>#btn-icon-game-1{
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(2)>#btn-icon-game-2{
+        -ms-grid-row: 1;
+        -ms-grid-column: 2;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(3)>#btn-icon-game-3{
+        -ms-grid-row: 2;
+        -ms-grid-column: 1;
+    }
+
+    #screen-3>#icons-btns>#ib-btns>#cabecalho-icons-btns>#nav-icons-btn>#lista-nav-ib>.item-lista-nav-ib:nth-child(4)>#btn-icon-game-4{
+        -ms-grid-row: 2;
+        -ms-grid-column: 2;
+    }
+}
+
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.sublista-menu{
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 3;
+        -ms-grid-column: 1;
+    }
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(2){
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 3;
+        -ms-grid-column: 3;
+    }
+
+    #screen-1>#menu-principal>#menu-prin>#navegacao-menu-principal>#nav-menu>.item-lista-menu:nth-child(3){
+        -ms-grid-row: 5;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 3;
+    }
+}
+
+@media (max-width:720px) and (orientation:portrait){
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#avatar-player{
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 2;
+        -ms-grid-column: 1;
+    }
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#lv-player{
+        -ms-grid-row: 1;
+        -ms-grid-column: 2;
+    }
+
+    #screen-1>#nav-bar>#navegacao>#nav-lista>#ava-lv-exp>#exp-bar{
+        -ms-grid-row: 2;
+        -ms-grid-column: 2;
+    }
 }
 
 @media (max-width:720px) and (orientation:portrait){
